--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="yspKwRmYq5FOkGQqDdVo9buRjWgHYfzxRpWOgNxvC94" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
